# MCINTROPYTHON

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
notebooks/01_Python/: 01_overview.ipynb  02_ControlStatements.ipynb  03_OtherTypes.ipynb  04_numpy.ipynb
notebooks/02_Pandas/: 01_overview.ipynb  02a_modification.ipynb  02b_NanValues.ipynb  02c_TimeSeries.ipynb  03_visualization.ipynb  05_visualization.ipynb  rdu-weather-history.csv
notebooks/03_ProyectoPandas/: 01_overview.ipynb  ProyectoPandas.ipynb
notebooks/04_ProyectoGIS/: 01_overview.ipynb  02_wms_visualizacion.ipynb  03_wfs_geojson_api_geopandas.ipynb
notebooks/04_ProyectoGIS/data/: colegios_publicos_aragon.geojson  n2k_focus_classes_multiclass.tif  n2k_focus_classified_binary.tif  n2k_focus_ex_green.tif
