[project]
name = "mcintropython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.9.0",
    "sphinxcontrib-napoleon>=0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
