[project]
name = "mcintropython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "owslib>=0.35.0",
    "pandas>=3.0.1",
    "pyproj>=3.7.0",
    "rasterio>=1.4.0",
    "shapely>=2.1.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.0.0",
    "nbsphinx>=0.9.0",
    "sphinxcontrib-napoleon>=0.7",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
